lab5/stale i static/wskaznik na stala/out.log
a.cpp: In function ‘int main()’:
a.cpp:10:8: error: assignment of read-only location ‘* p’
   10 |     *p = 555;
      |     ~~~^~~~~
